# rust-socketio

engineio/: Cargo.toml
engineio/benches/: engineio.rs
engineio/src/: error.rs  lib.rs
engineio/src/asynchronous/: async_socket.rs
engineio/src/asynchronous/async_transports/: polling.rs  websocket.rs  websocket_general.rs  websocket_secure.rs
engineio/src/asynchronous/client/: async_client.rs  builder.rs
socketio/: Cargo.toml
socketio/src/: lib.rs
socketio/src/asynchronous/client/: builder.rs  client.rs
socketio/src/client/: builder.rs  mod.rs
