[package]
name = "rust_engineio"
version = "0.4.1-alpha.1"
authors = ["Bastian Kersting <bastian@cmbt.de>"]
edition = "2021"
description = "An implementation of a engineio client written in rust."
readme = "README.md"
repository = "https://github.com/1c3t3a/rust-socketio"
keywords = ["engineio", "network", "protocol", "client"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]
license = "MIT"

[dependencies]
base64 = "0.21.0"
bytes = "1"
hyper = { version = "0.14", default-features = false, features = ["client", "http1", "http2", "runtime", "stream"] }
hyper-rustls = { version = "0.24", default-features = false, features = ["http1", "http2", "tls12", "tokio-runtime", "webpki-tokio"] }
rustls = { version = "0.21" }
adler32 = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2.9"
tokio-tungstenite = { version = "0.19", features = ["rustls-tls-webpki-roots"] }
# tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
tokio = { version = "1.16.1", default-features = false, features = ["sync"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
async-trait = "0.1.68"
async-stream = "0.3.5"
thiserror = "1.0"
url = "2.3.1"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio"] }
lazy_static = "1.4.0"
rustls-pemfile = { version = "1.0" }

[dev-dependencies.tokio]
version = "1.16.1"
# we need the `#[tokio::test]` macro
features = ["macros", "rt-multi-thread"]

[[bench]]
name = "engineio"
harness = false

# needs to be present in order to support the benchmark
# ci job
# source: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[features]
default = ["async"]
async-callbacks = []
async = ["async-callbacks"]
